--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,16 +2,17 @@
 @import "~bootstrap/scss/bootstrap";
 @import 'web-home';
 @import "project";
+@import "form";
+@import "table";
 
 
 .form-register {
-  margin-top :100px;
+  margin-top : 8rem;
 }
 
 p {
   font-family: Roboto;
 }
-
 
 
 
