task attribution and tab view of tasks

--- a/templates/component/project/_project_members.html.twig
+++ b/templates/component/project/_project_members.html.twig
@@ -14,23 +14,27 @@
         {% endif %}
     {% endfor %}
 </ul>
-{% if (app.user.isParticipantOn(project)) and (app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER')) %}
-    <h6>They are currently waiting to be accepted on this project</h6>
-    {% for participant in project.participants %}
-        <ul>
-            {% if participant.role == constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER') %}
-                <li>
-                    <span>{{ participant.role }} - {{ participant.user.firstname }}</span>
-                    <form method="post" action="{{ path('project_participant_project_accepted', {'project': participant.project.id, 'user': participant.user.id}) }}">
-                        <button class="btn btn-primary">Approve</button>
-                    </form>
-                    <form method="post" action="{{ path('project_participant_project_removed', {'project': participant.project.id, 'user': participant.user.id}) }}">
-                        <button class="btn btn-primary">Reject</button>
-                    </form>
-                </li>
-            {% endif %}
-        </ul>
-    {% endfor %}
+{% if app.user %}
+    {% if (app.user.isParticipantOn(project)) and (app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER')) %}
+        <h6>They are currently waiting to be accepted on this project</h6>
+        {% for participant in project.participants %}
+            <ul>
+                {% if participant.role == constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER') %}
+                    <li>
+                        <span>{{ participant.role }} - {{ participant.user.firstname }}</span>
+                        <form method="post"
+                              action="{{ path('project_participant_project_accepted', {'project': participant.project.id, 'user': participant.user.id}) }}">
+                            <button class="btn btn-primary">Approve</button>
+                        </form>
+                        <form method="post"
+                              action="{{ path('project_participant_project_removed', {'project': participant.project.id, 'user': participant.user.id}) }}">
+                            <button class="btn btn-primary">Reject</button>
+                        </form>
+                    </li>
+                {% endif %}
+            </ul>
+        {% endfor %}
+    {% endif %}
 {% endif %}
 
 
