--- a/templates/component/project/task/task_new.html.twig
+++ b/templates/component/project/task/task_new.html.twig
@@ -9,7 +9,7 @@
             <div class="col-lg-8 col-sm-12">
                 <h1 class="text-primary">Task creation</h1>
 
-    {{ include('component/project/task/task_form.html.twig') }}
+                    {% include'component/project/task/task_form.html.twig' %}
 
 
             </div>
