--- a/templates/component/project/_project_tasks.html.twig
+++ b/templates/component/project/_project_tasks.html.twig
@@ -1,65 +1,30 @@
 <div class="taskDashboard">
     <div class="row justify-content-sm-center mt-5">
-        <div class="home-section d-flex flex-column bg-light col-md-10 col-sm-10 rounded m-4 p-4 shadow">
+        <div class="home-section d-flex flex-column bg-light col-md-10 col-sm-10 rounded m-4 p-4 shadow ">
 
             <h1>All tasks in this project</h1>
-            <a href="{{ path('project_task_new', {'id' : project.id}) }}">Create a new task</a>
-            <div class="col align-self-end">
-            <a class="align-content-end" href="{{ path('project_show_table', {'id' : project.id}) }}">Switch to table vue</a>
-            </div>
-        </div>
+            <p>    <a href="{{ path('project_task_new', {'id' : project.id}) }}">Create a new task</a></p>
 
-        {% for task in tasks %}
-            <div class="flex-row">
-
-                <div class="card task m-1" style="width: 18rem;">
-                    <div class="card-body">
-
-                        {% if task.status == 0 %}
-                            <span class="bg-secondary text-light mb-1">To start </span>
-
-                        {% elseif task.status == 1 %}
-                            <span class="bg-blueish text-light mb-1">In progress </span>
-                        {% elseif task.status == 2 %}
-                            <span class="bg-greenish text-light mb-1">Achieved </span>
-                        {% endif %}
-
-                        <h5 class="card-title">{{ task.name }}</h5>
-                        {% if task.status == 0 or task.status == 1 %}
-                            <p class="card-text">{{ task.description }}</p>
-
-                            <p><small class="card-subtitle text-muted">Attributed to : {% for user in task.users %}
-                                        <cite>{{ user.firstname }}</cite>
-                                    {% endfor %}</small></p>
-                            <p><small class="card-subtitle text-muted">Deadline :
-                                    <cite>{{ task.deadline|date('Y-m-d') }}</cite></small></p>
-
-                            <a class="card-link btn"
-                               href="{{ path('project_task_edit', {'idTask': task.id}) }}">edit</a>
-                        {% endif %}
-
-                        {% if task.status == 0 %}
-                            <form action="{{ path('project_task_attribute', {'idTask' : task.id}) }}" method="post">
-                                <button class="card-link btn">Attribute this task</button>
-                            </form>
-                            <form action="{{ path('status_attributTask', {'id' : task.id}) }}" method="post">
-                                <button class="card-link btn">Start</button>
-                            </form>
-
-                        {% endif %}
-
-                        {% if task.status == 1 %}
-                            <form action="{{ path('status_achievedTask', {'id' : task.id}) }}" method="post">
-                                <button class="card-link btn">Close the task</button>
-                            </form>
-                        {% endif %}
-
-                    </div>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link active" id="cards-tab" data-toggle="tab" href="#cards" role="tab"
+                       aria-controls="cards" aria-selected="true">Cards</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="table-tab" data-toggle="tab" href="#table" role="tab" aria-controls="table"
+                       aria-selected="false">Table</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="cards" role="tabpanel" aria-labelledby="cards-tab">
+                    {% include 'component/project/_project_tasks_cards.html.twig' %}
+                </div>
+                <div class="tab-pane fade" id="table" role="tabpanel" aria-labelledby="table-tab">
+                    {% include 'component/project/_project_tasks_table.html.twig' %}
                 </div>
             </div>
-        {% else %}
-            <h3>no tasks yet on this project</h3>
-        {% endfor %}
+
+        </div>
 
     </div>
 </div>
