--- a/templates/component/_flashes.html.twig
+++ b/templates/component/_flashes.html.twig
@@ -1,6 +1,6 @@
 {% for label, messages in app.flashes %}
     {% for message in messages %}
-        <div class="alert alert-{{ label }}">
+        <div class="alert alert-{{ label }} flash">
             {{ message }}
         </div>
     {% endfor %}
