PM14 As a Member I can see, on my dashboard, all projects in different section depending on my role on those projects

--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -14,7 +14,7 @@
                                                 {% if project.status == 0 %}
                                                     Not validated yet.
                                                 {% elseif project.status == 1 %}
-                                                    Validated ! Needs some voluntaree.
+                                                    Validated ! Needs some volunteers.
                                                 {% elseif project.status == 2 %}
                                                     Opened.
                                                 {% elseif project.status == 3 %}
