--- a/templates/component/dashboard/_userprofile.html.twig
+++ b/templates/component/dashboard/_userprofile.html.twig
@@ -1,68 +1,68 @@
  <table>
-        <thead>
-                <h4 class="table-title">Your Profile</h4>
-        </thead>
-    <tbody>
+    <thead>
+            <h4 class="table-title">Your Profile</h4>
+    </thead>
+    <tbody class="col-sm">
         <tr>
             <td>Email :</td>
-            <td>{{ user.email }}</td>
+            <td class="input-element">{{ app.user.email }}</td>
         </tr>
         <tr>
             <td>Password :</td>
-            <td>******</td>
+            <td class="input-element">******</td>
         </tr>
         <tr>
             {% if not app.user.organization %}
             <td>Firstname :</td>
                 {% if app.user.firstname is empty %}
-            <td>Add a firstname</td>
+            <td class="input-element">Add a firstname</td>
                 {% else %}
-            <td>{{ app.user.firstname }}</td>
+            <td class="input-element">{{ app.user.firstname }}</td>
                 {% endif %}
         </tr>
         <tr>
-            <td>Lastname : </td>
+            <td>Lastname :</td>
                 {% if app.user.lastname is empty %}
-            <td>Add a lastname</td>
+            <td class="input-element">Add a lastname</td>
                 {% else %}
-           <td>{{ app.user.lastname }}</td>
-                {%  endif %}
+           <td class="input-element">{{ app.user.lastname }}</td>
+                {% endif %}
         </tr>
             {% else %}
         <tr>
-            <td>Organization : </td>
+            <td>Organization :</td>
                     {% if app.user.organization.name is empty %}
-            <td>Add an organization</td>
+            <td class="input-element">Add an organization</td>
                     {% else %}
-            <td>{{ app.user.organization.name }}</td>
+            <td class="input-element">{{ app.user.organization.name }}</td>
                     {% endif %}
             {% endif %}
         </tr>
         <tr>
             <td class="top-cel">Biography :</td>
-            <td>{{ (user.biography != null ? user.biography : 'Complete your biography') }}</td>
+            <td class="checkbox-overflow overflow-auto form-control col-sm">{{ (app.user.biography != null ? user.biography : 'Complete your biography') }}</td>
         </tr>
         <tr>
             <td>Country :</td>
-            <td> {{ (user.country != null ? user.country.name : 'Add a country') }}</td>
+            <td class="input-element">{{ (app.user.country != null ? user.country.name : 'Add a country') }}</td>
         </tr>
         <tr>
             <td class="top-cel">Languages :</td>
-            <td>
-            {% for language in user.languages %}
+            <td class="input-element">
+            {% for language in app.user.languages %}
                 <ul>
                     <li>
                         {{ language.name }}
                     </li>
                 </ul>
             {% else %}
+            Add a language
             </td>
-            <td>Add a language</td>
         </tr>
             {% endfor %}
         <tr>
             <td>
-                <a href="{{ path('dashboard_edit', {'id': user.id} ) }}"><button class="btn btn-secondary-alt">Edit my profil</button></a>
+                <a href="{{ path('dashboard_edit', {'id': user.id}) }}"><button class="btn btn-secondary-alt">Edit my profil</button></a>
             </td>
             <td>
                 <form method="post" action="{{ path('dashboard_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure ? Your account will be delete forever');">
