--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -10,14 +10,7 @@
 {% block framed %}
 <h1 class="text-primary">Your Dashboard</h1>
     <div class="row">
-        <div class="col-3">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link changingtab active" id="v-pills-projects-tab" data-toggle="pill" href="#v-pills-projects" role="tab" aria-controls="v-pills-projects" aria-selected="true">Projects</a>
-                <a class="nav-link changingtab" id="v-pills-accomplishments-tab" data-toggle="pill" href="#v-pills-accomplishments" role="tab" aria-controls="v-pills-accomplishments" aria-selected="false">Accomplishements</a>
-                <a class="nav-link changingtab" id="v-pills-skills-tab" data-toggle="pill" href="#v-pills-skills" role="tab" aria-controls="v-pills-skills" aria-selected="false">Skills</a>
-                <a class="nav-link changingtab" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
-            </div>
-        </div>
+        {% include 'component/_navbar_dashboard.html.twig' %}
         <div class="col-9">
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade changingcontent show active" id="v-pills-projects" role="tabpanel" aria-labelledby="v-pills-projects-tab">
