First step towards cleaning : css + fix links + RoleRetriever

--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -5,6 +5,11 @@ body {
   animation: gradient 120s ease infinite;
 }
 
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
 html {
   scroll-behavior: smooth;
 }
