--- a/templates/component/project/_project_tasks_table.html.twig
+++ b/templates/component/project/_project_tasks_table.html.twig
@@ -1,4 +1,4 @@
-<div class="mt-2  hide-mobile" id="tasks">
+<div class="mt-2" id="tasks">
     <button class="sort btn btn-secondary mb-3" data-sort="name">
         Sort by name
     </button>
@@ -9,7 +9,7 @@
         Sort by status
     </button>
     <input class="search nav-item mb-5 ml-2" placeholder="Search in table"/>
-    <table class="table table-hover ">
+    <table class="table table-hover table-responsive">
         <thead>
         <tr>
             <th scope="col">Name</th>
