--- a/templates/component/dashboard/_userprofile.html.twig
+++ b/templates/component/dashboard/_userprofile.html.twig
@@ -52,7 +52,7 @@
             {% for language in app.user.languages %}
             <ul>
                 <li>
-                    {{ app.language.name }}
+                    {{ language.name }}
                 </li>
             </ul>
             {% else %}
