--- a/templates/component/project/_project_members.html.twig
+++ b/templates/component/project/_project_members.html.twig
@@ -1,4 +1,5 @@
-<h6>The current project owner</h6>
+<div class="p-5">
+    <h5>The current project owner</h5>
 <ul>
     {% for participant in project.participants %}
         {% if participant.role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER') %}
@@ -6,22 +7,27 @@
         {% endif %}
     {% endfor %}
 </ul>
-<h6>They are currently contributing to this project</h6>
-<ul>
-    {% for participant in project.participants %}
+</div>
+
+<div class="p-5">
+    <h5>They are currently contributing to this project</h5>
+    <ul>{% for participant in project.participants %}
         {% if participant.role == constant('App\\Entity\\Participant::ROLE_VOLUNTEER') %}
             <li>{{ participant.role }} - {{ participant.user.firstname }}</li>
         {% endif %}
     {% endfor %}
-</ul>
+    </ul>
+</div>
+<div class="p-5">
 {% if app.user %}
     {% if (app.user.isParticipantOn(project)) and (app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER')) %}
-        <h6>They are currently waiting to be accepted on this project</h6>
+        <h5>They are currently waiting to be accepted on this project</h5>
         {% for participant in project.participants %}
             <ul>
                 {% if participant.role == constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER') %}
                     <li>
                         <span>{{ participant.role }} - {{ participant.user.firstname }}</span>
+
                         <form method="post"
                               action="{{ path('project_participant_project_accepted', {'project': participant.project.id, 'user': participant.user.id}) }}">
                             <button class="btn btn-primary">Approve</button>
@@ -36,5 +42,6 @@
         {% endfor %}
     {% endif %}
 {% endif %}
+</div>
 
 
