--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -15,24 +15,24 @@
     <div class="row mt-5">
         <div class="col-1">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link active" id="v-pills-tasks-tab" data-toggle="pill" href="#v-pills-tasks" role="tab" aria-controls="v-pills-tasks" aria-selected="true">Tasks</a>
-                <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
-                <a class="nav-link" id="v-pills-details-tab" data-toggle="pill" href="#v-pills-details" role="tab" aria-controls="v-pills-details" aria-selected="false">Details</a>
-                <a class="nav-link" id="v-pills-members-tab" data-toggle="pill" href="#v-pills-members" role="tab" aria-controls="v-pills-members" aria-selected="false">Members</a>
+                <a class="nav-link  changingtab active" id="v-pills-tasks-tab" data-toggle="pill" href="#v-pills-tasks" role="tab" aria-controls="v-pills-tasks" aria-selected="true">Tasks</a>
+                <a class="nav-link changingtab " id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+                <a class="nav-link changingtab " id="v-pills-details-tab" data-toggle="pill" href="#v-pills-details" role="tab" aria-controls="v-pills-details" aria-selected="false">Details</a>
+                <a class="nav-link changingtab " id="v-pills-members-tab" data-toggle="pill" href="#v-pills-members" role="tab" aria-controls="v-pills-members" aria-selected="false">Members</a>
             </div>
         </div>
         <div class="col-11">
             <div class="tab-content" id="v-pills-tabContent">
-                <div class="tab-pane fade show active" id="v-pills-tasks" role="tabpanel" aria-labelledby="v-pills-tasks-tab">
+                <div class="tab-pane fade  changingcontent show active" id="v-pills-tasks" role="tabpanel" aria-labelledby="v-pills-tasks-tab">
                     {% include 'component/project/_project_tasks.html.twig' %}
                 </div>
-                <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+                <div class="tab-pane fade changingcontent " id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                     {% include 'component/project/_project_messages.html.twig' %}
                 </div>
-                <div class="tab-pane fade" id="v-pills-details" role="tabpanel" aria-labelledby="v-pills-details-tab">
+                <div class="tab-pane fade changingcontent " id="v-pills-details" role="tabpanel" aria-labelledby="v-pills-details-tab">
                     {% include 'component/project/_project_details.html.twig' %}
                 </div>
-                <div class="tab-pane fade" id="v-pills-members" role="tabpanel" aria-labelledby="v-pills-members-tab">
+                <div class="tab-pane fade changingcontent " id="v-pills-members" role="tabpanel" aria-labelledby="v-pills-members-tab">
                     {% include 'component/project/_project_members.html.twig' %}
                 </div>
             </div>
