--- a/assets/styles/dashboard.scss
+++ b/assets/styles/dashboard.scss
@@ -10,3 +10,69 @@
 .icon-button-navbar{
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
+.skillset-card {
+  width: 300px;
+  margin: 25px 0;
+  display: flex;
+  align-items: center;
+  user-select: none;
+
+  label {
+    font-size: 16px;
+    color: #4D4D4D;
+    position: absolute;
+    z-index: 10;
+    padding-left: 50px;
+    cursor: pointer;
+  }
+
+  input {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+
+    &:checked {
+
+      ~ .check {
+        border-color: #00EA90;
+        box-shadow: 0px 0px 0px 15px var(--blueish) inset;
+
+        &::after {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+    }
+  }
+
+  .check {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 100px;
+    background-color: #FFF;
+    border: 2px solid #00EA90;
+    box-shadow: 0px 0px 0px 0px #00EA90 ;
+    transition: all 0.15s cubic-bezier(0, 1.05, 0.72, 1.07);
+
+    &::after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      z-index: 4;
+      position: absolute;
+      transform: scale(0);
+      background-size: 50%;
+      background-image: url('http://s6.picofile.com/d/8392306668/c38c12a0-6db3-47d4-a80c-7dad8fab5186/checkmark.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      transition-delay: 0.2s !important;
+      transition: all 0.25s cubic-bezier(0, 1.05, 0.72, 1.07);
+    }
+  }
+}
