organization front of project show

--- a/templates/layout/frame.html.twig
+++ b/templates/layout/frame.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block content %}
     <div class=" form-register row justify-content-sm-center align-content-center">
-        <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
+        <div id="concept" class="home-section container bg-light col-11 rounded mb-5 pt-3 p-1 shadow">
             <div class="row justify-content-center">
                 <div class="col-lg-12 col-sm-12">
                     {% block framed %}
