--- a/templates/project/_delete_form.html.twig
+++ b/templates/project/_delete_form.html.twig
@@ -1,6 +1,6 @@
 
 <form method="post" action="{{ path('project_delete', {'id': project.id}) }}" onsubmit="return confirm('Are you sure you want to delete this project ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ project.id) }}">
-    <button class="btn btn-danger m-3">Delete</button>
+    <button class="btn btn-danger mx-2 my-2">Delete</button>
 </form>
 
